--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.TestProject"
         tools:targetApi="31"
         android:name=".CustomApplication">
+
+        <activity
+            android:name=".presentation.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TestProject">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
